--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <link rel="stylesheet" href="css/services.css">
      <link rel="stylesheet" href="css/work_with_us.css">
      <link rel="stylesheet" href="css/footer.css">
+     <link rel="stylesheet" href="css/media.css">
  </head>
  <body>
     <header class="header">
